Update README with VM arguments for Java execution
Added instructions for VM arguments to run the program.