@@ -1,1 +1,15 @@
 Need java 25 or higher. 
+
+This program does not use Java modules. To run, add the following VM arguments:
+```
+--module-path Integrative-Project/project/lib
+--add-modules javafx.controls,javafx.base,javafx.graphics,javafx.fxml
+--add-exports=javafx.graphics/com.sun.prism=ALL-UNNAMED
+--add-exports=javafx.graphics/com.sun.javafx.scene.layout=ALL-UNNAMED 
+--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED
+--add-exports=javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED
+--add-exports=javafx.graphics/com.sun.scenario=ALL-UNNAMED
+--add-exports=javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED
+--add-exports=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+--enable-native-access=ALL-UNNAMED --enable-native-access=javafx.graphics
+```
